= cerealize changes history

== cerealize 0.8.2 -- 2010-08-04
* Added attr_hash feature, create virtual properties inside a hash.
  An example:

    require 'cerealize'

    class User < ActiveRecord::Base
      include Cerealize
      cerealize :data
      attr_hash :data, [:name, :mail]
    end

    user = User.new
    user.name = 'ham'

    # which is equivalent to:

    user.data ||= {}
    user.data[:name] = 'ham'

== cerealize 0.8.1 -- 2010-07-16
* module_eval is a lot faster than define_method with a block,
  I think it's all about closure.

* Now we're creating cerealize methods inside a saperate,
  this makes it easier to override things, thus doing extension.
  An example:

    class Dog < ActiveRecord::Base
      include Cerealize

      cerealize :mood, String
      def mood
        "mood: #{super}"
      end
    end

  Previously, this would break things. (Please avoid alias_method_chain.)

== cerealize 0.8.0 -- 2010-04-18
* release early, release often