@@ -1,4 +1,4 @@
-= cerealize 0.8.2
+= cerealize 0.8.3
 by Cardinal Blue ( http://cardinalblue.com )
 
 == LINKS:
