@@ -1,4 +1,4 @@
 
 module Cerealize
-  VERSION = '0.8.2'
+  VERSION = '0.8.3'
 end
